@@ -44,8 +44,8 @@ ClassDescription<MamboDecayer> MamboDecayer::initMamboDecayer;
 void MamboDecayer::Init() {
   
   static ClassDocumentation<MamboDecayer> documentation
-    ("This is the implementation of the MAMBO algorithm of Kleiss & "
-     "Stirling for multi-particle phase-space decays.");
+    ("Decayer class that implements MAMBO algorithm of Kleiss-"
+     "Stirling.");
 
   
   static Parameter<MamboDecayer,double> interfaceMaximumWeight
@@ -75,6 +75,7 @@ ParticleVector MamboDecayer::decay(const DecayMode & dm,
   vector<Lorentz5Momentum> productMomentum(N);
   Energy gluMass = global->effectiveGluonMass();
   for(int i = 0; i < N; ++i) {
+      Energy currentMass = children[i]->constituentMass();
       if (children[i]->id() == 21) {
 	productMomentum[i].setMass(gluMass);
 	}
@@ -156,6 +157,7 @@ ParticleVector MamboDecayer::decay(const DecayMode & dm,
 double MamboDecayer::calculateMomentum(vector<Lorentz5Momentum> & mom,
 				       const Energy & comEn) const
 {
+  const double twopi(2*Constants::pi);
   const int N = mom.size();
   double rmtot(0.0);
   double rm2tot(0.0);
